--- a/style/index.css
+++ b/style/index.css
@@ -3,6 +3,10 @@ body{
     padding:0;
 }
 
+.bazar{
+    color:#00b4ff;
+}
+
 #thumbnail2{
     display:none;
 }
@@ -54,6 +58,7 @@ body{
 .info{
     display:block;
     margin-left:0.5vw;
+    z-index: 9;
 }
 
 .thumbnail-holder{
@@ -141,6 +146,7 @@ margin-right: 0;
     position:absolute;
     bottom: 10px;
     left:0px;
+    z-index: 100;
 }
 
 .navbar{
@@ -175,8 +181,8 @@ display:inline-block;
     position: absolute;
     left:0px;
     top:0px;
-    background-color: black;
-    opacity: 0.5;
+    background-color: #0a0f2e;
+    opacity: 0.8;
 }
 
 .more2{
@@ -314,6 +320,8 @@ display:inline-block;
             margin:0.5vw;
             padding-bottom: 15px;
             }
+
+
 
             /*treba kom*/
       /*      .featured article>img{
@@ -502,10 +510,29 @@ border-bottom: solid 2px #00b4ff;
 padding-top: 2px;
   }
 
-  @media screen and (min-width: 1280px) {
-.menu-item:hover{
-border-bottom: solid 2px #00b4ff;
-}
+  .nav2{
+    display: flex;
+    flex-flow: row;
+  }
+
+  a{
+      text-decoration: none;
+      color:inherit;
+  }
+
+  .menu-item2 {
+    /* these are the flex items */
+    flex: 1;
+  margin-left:10px;
+  margin-right:10px;
+  color:#B0B2BB;
+  cursor: pointer;
+  }
+
+  .menu-item2:first-child {
+    /* these are the flex items */
+color:  #00b4ff;
+
   }
 
     .menu-btn{
@@ -576,6 +603,14 @@ footer>div{
     border-bottom: solid 1px #6f738e;
 }
 
+footer>span{
+    background-color: #0a0f2e;
+    padding-top:20px;
+    display:flex;
+    flex-flow: row;
+    justify-content: space-evenly;
+}
+
 footer>div>div{
     color:#6f738e;
 }
@@ -589,6 +624,7 @@ footer>div>div>h2{
 footer{
     background-color: #0a0f2e;
     padding-bottom: 20px;
+    color:#6f738e;
 }
 /*
 body{
@@ -671,12 +707,107 @@ article{
     cursor: pointer;
 }
 
+
+#shopBtns{
+    background-color: white;
+    border:solid 0.5px lightgray;
+   /* padding:5px;*/
+    align-self: flex-end;
+    margin-bottom: 20px;
+
+    display:flex;
+    flex-flow: row;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+#shopBtns>img{
+    padding:10px;
+    height:16px;
+}
+
+
+.divide{
+    width:1px;
+    height:36px;
+    background-color: lightgray;
+}
+
+@media screen and (min-width: 1280px) {
+
+.thumbnail-img, .img-div{
+    animation:imgLoad 5s;
+}
+
+
+.shopNow:hover{
+    animation: shopNow 0.5s;
+    animation-fill-mode: forwards;
+}
+
+    .menu-item:hover{
+        animation: menuHover 0.5s;
+animation-fill-mode: forwards;
+        }
+
+.article1:hover, .article2:hover, .article3:hover, .article4:hover, .article5:hover, .article6:hover{
+animation: articleShadow 0.5s;
+animation-fill-mode: forwards;
+}
+
+@keyframes articleShadow{
+    0%{
+
+    }
+    100%{
+        -webkit-box-shadow: 5px 5px 2.5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 5px 5px 2.5px 0px rgba(0,0,0,0.75);
+        box-shadow: 5px 5px 2.5px 0px rgba(0,0,0,0.75);
+    }
+}
+
+@keyframes menuHover{
+    0%{
+
+    }
+    100%{
+border-bottom: solid 2px #00b4ff;
+    }
+}
+
+
+@keyframes shopNow{
+    0%{
+
+    }
+    100%{
+background-color: #008cff;
+    }
+}
+
+
+@keyframes imgLoad {
+    0%{
+opacity:0;
+    }
+    100%{
+opacity: 1;
+    }
+}
+
+
+}
+
 /* New code up here */
 
 
 @media screen and (max-width: 1279px) {
     /* For tablets: */
  
+.vertical-right{
+    display: none;
+}
+
     .arrows-article{
         display:block;
         justify-self: center;
@@ -728,7 +859,16 @@ article{
                 padding:25px 5px 15px 5px;
                 }
 
-                
+                .articleBuy{
+                  padding-top:0;
+                  padding-left:5px;
+                  padding-right: 5px;
+                }
+
+                #imgDiv{
+                   flex-grow: 2;
+                }
+
                 article>img{
                   max-width: 100%;
                   padding-bottom: 25px;
@@ -746,6 +886,19 @@ article{
     left:5px;
     z-index:10;
 }
+
+footer>span{
+    display:flex;
+flex-flow: column;
+align-items: center;
+border:0;
+padding-bottom:0;
+}
+
+footer>span>span{
+   padding-bottom: 10px;
+}
+
 
 }
 
@@ -783,7 +936,10 @@ article{
     display:none;
 }
 
-#content{
+#content>div{
+    display:none;
+}
+#content>article{
     display:none;
 }
 
@@ -815,9 +971,9 @@ article{
                 }
 
                 footer>div{
+                    display:flex;
                     flex-flow: column;
-                    align-items: flex-start;
-                    display:inline-block;
+                    align-items: center;
                     border:0;
                     padding-bottom:0;
                     }
@@ -825,12 +981,25 @@ article{
                     footer{
                         display: flex;
                         justify-content: center;
+                        flex-flow: column;
                     }
 
                     footer>div>div{
                         padding-bottom: 20px;
+                        
                         }
                         
+                        footer>div>div>nav{
+                            display:flex;
+                            flex-flow: column;
+                            align-items: center;
+                            justify-content: center;
+                            }
+
+                            footer>div>div>h2{
+text-align: center;
+                            }
+
 
                 #search{
                     display:none;
@@ -850,7 +1019,40 @@ article{
                    display: none;
                 }
 
+                #email{
+                 width:80%;
+                 max-width:1000px;
+                 min-width: 20px;
+                 margin-bottom: 10px;
+                }
 
+                .other>div>article{
+                    display:flex;
+                }
+
+                .other{
+                    width:100%;
+                    margin-left: 0;
+                    padding-left: 0;
+                }
+.arrows-article{
+    display: none;
+}
+}
+
+@media only screen and (max-width:320px) {
+.line1{
+    flex-flow: column;
+    align-items: center;
+}
+.line2{
+    flex-flow: column;
+    align-items: center;
+}
+
+article{
+    margin-bottom: 10px;
+}
 }
 
 /*everything else - computer*/
