--- a/style/index.css
+++ b/style/index.css
@@ -19,6 +19,10 @@ body{
     z-index: 100;
 }
 
+.article{
+    flex-grow: 1;
+}
+
 .thumbnail{
     height:100%;
     width:70vw;
@@ -121,11 +125,6 @@ margin-right: 0;
 
 .articleB{
     width:50%;
-}
-
-.articleC{
-    width:50%;
-    background-color: initial;
 }
 
   .thumbnail-button{
@@ -307,7 +306,7 @@ display:inline-block;
             justify-content: flex-start;
             }
             
-            article{
+            .article{
                 position: relative;
                 display:flex;
                 /*justify-content:space-between;
@@ -341,7 +340,7 @@ display:inline-block;
                 align-self: center;
                 justify-self: center;
               }*/
- article>img{
+ .article>img{
     max-width: 100%;
     max-height: 20vh;
     width:auto;
@@ -350,7 +349,7 @@ display:inline-block;
     justify-self: center;
  }
 
- article>div>img{
+ .article>div>img{
     max-width: 100%;
     max-height: 20vh;
     width:auto;
@@ -472,7 +471,7 @@ display:inline-block;
 margin-top:40px;
 }
 
-.blogText article{
+.blogText .article{
     background-color: inherit;
     align-self: flex-start;
 }
@@ -699,7 +698,7 @@ background-color: inherit;
     z-index: 100;
 }
 
-article{
+.article{
     cursor: pointer;
 }
 
@@ -845,7 +844,7 @@ opacity: 1;
                 justify-content: center;
                 }
                 
-                article{
+                .article{
                     position: relative;
                     display:flex;
                    /* justify-content:center;
@@ -869,7 +868,7 @@ opacity: 1;
                    flex-grow: 2;
                 }
 
-                article>img{
+                .article>img{
                   max-width: 100%;
                   padding-bottom: 25px;
                 }
@@ -920,7 +919,7 @@ footer>span>span{
 .shopNow{
     display:none;
 }
-    article{
+    .article{
         display:none;
     }
 
@@ -936,10 +935,7 @@ footer>span>span{
     display:none;
 }
 
-#content>div{
-    display:none;
-}
-#content>article{
+#content>.justFlex{
     display:none;
 }
 
@@ -1026,7 +1022,7 @@ text-align: center;
                  margin-bottom: 10px;
                 }
 
-                .other>div>article{
+                div.other>div>div.article{
                     display:flex;
                 }
 
@@ -1050,9 +1046,24 @@ text-align: center;
     align-items: center;
 }
 
-article{
+.article{
     margin-bottom: 10px;
+    flex-grow: 1;
+    width:90%;
 }
 }
 
 /*everything else - computer*/
+.articleC{
+    width:50%;
+    background-color: transparent;
+}
+
+.underFooter{
+    border-bottom: 0;
+    padding-bottom: 10px;
+}
+
+.clickMe{
+    cursor: pointer;
+}
