everything done :) about us and contact us navbar menu

--- a/style/aboutUs.css
+++ b/style/aboutUs.css
@@ -1,4 +1,27 @@
 #content{
     display: flex;
     justify-content: center;
+    padding:40px 0 40px 0;
+    width:80vw;
+    margin-left:10vw;
+}
+
+.aboutImg{
+    width:50vw;
+    min-width: 300px;
+    padding-right:20px;
+}
+
+@media only screen and (max-width:620px) {
+    #content{
+        flex-direction: column;
+        align-content: center;
+        width:90vw;
+        margin-left: 5vw;
+    }
+    
+    .aboutImg{
+        width:100%;
+        min-width: 300px;
+    }
 }
